--- a/index.html
+++ b/index.html
@@ -8,8 +8,16 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <header>
-      <h1>Welcome to platos restaurant</h1>
+    <header class="header">
+      <h1 class="header-logo">Plato's Restaurant</h1>
+      <nav class="header-nav">
+        <ol class="header-nav-list">
+          <li ><a href="" class="header-nav-link">Home</a></li>
+          <li><a href="" class="header-nav-link">Abous us</a></li>
+          <li><a href="" class="header-nav-link">Menu</a></li>
+        </ol>
+
+      </nav>
     </header>
 
   </body>
