Adding the about and the banner sections

--- a/index.html
+++ b/index.html
@@ -12,13 +12,50 @@
       <h1 class="header-logo">Plato's Restaurant</h1>
       <nav class="header-nav">
         <ol class="header-nav-list">
-          <li ><a href="" class="header-nav-link">Home</a></li>
+          <li><a href="" class="header-nav-link">Home</a></li>
           <li><a href="" class="header-nav-link">Abous us</a></li>
           <li><a href="" class="header-nav-link">Menu</a></li>
         </ol>
 
       </nav>
     </header>
+    <section class="hero">
+      <div class="hero-textbox">
+          <h2 class="hero-subtitle">Welcome to:</h2>
+          <h2 class="hero-title">Platos restaurant</h2>
+          <div class="btn-next">
+            <a href="#" class="call-to-action"> Our menu</a>
+            <a href="#" class="call-to-action"> Learn more</a>
+        </div>
+      </div>
+    </section>
 
+    <section class="about">
+      <div class="about-textbox">
+          <div class="title">
+            <h3 class="title-subtitle">
+              Kenyan Restaurant
+            </h3>
+            <h3 class="title-maintitle">
+Welcome
+            </h3>
+          
+          </div>
+          <p class="about-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, laborum ipsum? Minima repudiandae expedita quibusdam nemo nobis libero harum perferendis non, ea totam necessitatibus at deleniti vel consectetur suscipit voluptate.</p>
+          <a href="#" class="call-tct">Our story</a>
+      </div>
+
+      <div class="about-img">
+        <img src="/assets/4.png" alt="About pizza">
+      </div>
+    </section>
+
+
+    <section class="banner-2">
+      <h3 class="banner-2-subtitle">
+        Discover
+      </h3>
+      <h2 class="banner-2-maintitle"> Platos restaurant</h2>
+    </section>
   </body>
 </html>
