This commit updates basic changes

--- a/index.html
+++ b/index.html
@@ -9,28 +9,28 @@
   </head>
   <body>
     <header class="header">
-      <h1 class="header-logo">Plato's Restaurant</h1>
+      <a href="#about" class="header-logo-wrapper"><h1 class="header-logo">Plato's Restaurant</h1></a>
       <nav class="header-nav">
         <ol class="header-nav-list">
-          <li><a href="" class="header-nav-link">Home</a></li>
-          <li><a href="" class="header-nav-link">Abous us</a></li>
-          <li><a href="" class="header-nav-link">Menu</a></li>
+          <li><a href="#hero" class="header-nav-link">Home</a></li>
+          <li><a href="#about" class="header-nav-link">Abous us</a></li>
+          <li><a href="#menu" class="header-nav-link">Menu</a></li>
         </ol>
 
       </nav>
     </header>
-    <section class="hero">
+    <section class="hero" id="hero">
       <div class="hero-textbox">
           <h2 class="hero-subtitle">Welcome to:</h2>
           <h2 class="hero-title">Platos restaurant</h2>
           <div class="btn-next">
-            <a href="#" class="call-to-action"> Our menu</a>
-            <a href="#" class="call-to-action"> Learn more</a>
+            <a href="#menu" class="call-to-action"> Our menu</a>
+            <a href="#about" class="call-to-action"> Learn more</a>
         </div>
       </div>
     </section>
 
-    <section class="about">
+    <section class="about" id="about">
       <div class="about-textbox">
           <div class="title">
             <h3 class="title-subtitle">
@@ -59,7 +59,7 @@ Welcome
     </section>
 
 
-    <section class="menu">
+    <section class="menu" id="menu">
       <div class="title">
         <h3 class="title-subtitle">
           And now
