--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Platos restaurant</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="/assets/4.png">
   </head>
   <body>
     <header class="header">
